--- a/index.html
+++ b/index.html
@@ -1,43 +1,228 @@
 <!DOCTYPE html>
-<html lang="en">
-    
-<head>
+<html lang="en" dirr="ltr">
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lab Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="test.css">
-    <title>Portfolio Website</title> 
-    <link rel="stylesheet" href="./style.css"/>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="lab.css">
+  </head>
 <body>
-    <header>
-        <a href="#" class="logo">Israel</a>
 
-        <nav>
-            <a href="#" class="active"> Home</a>
-            <a href="#" >Services</a>
-            <a href="#" >Skills</a>
-            <a href="#" >Education</a>
-            <a href="#" >Experience</a>
-            <a href="#" >Contact</a>
-        </nav>
-    </header>
-    <section class="home">
-        <div class="home-img">
-            <img src="main.jpg" alt="">
+
+    <!--Navigation Menu-->
+    <nav>
+        <div class="nav-container">
+            <div class="logo" data-aos="zoom-in" data-aos-duration="1100">
+                 Israel <span>Zuniga</span>
         </div>
-        <div class="home-content">
-            <h1>Hi, It's <span>Israel</span></h1>
-            <h3 class="typing-text">I'm a <span></span></h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus labore dolores esse. Odit similique doloribus tenetur doloremque, sunt commodi in ipsa repudiandae debitis deleniti blanditiis quibusdam quaerat neque asperiores ea.</p>
-            <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <div class="links">
+            <div class="link" data-aos="fade-up" data-aos-duration="1100" data-aos-delay="100"><a href="#">Home</a></div>
+            <div class="link" data-aos="fade-up" data-aos-duration="1100"data-aos-delay="200"><a href="#">About</a></div>
+            <div class="link" data-aos="fade-up" data-aos-duration="1100"data-aos-delay="300"><a href="#">Skills</a></div>
+            <div class="link" data-aos="fade-up" data-aos-duration="1100"data-aos-delay="400"><a href="#">Services</a></div>
+            <div class="link" data-aos="fade-up" data-aos-duration="1100"data-aos-delay="500"><a href="#">Contact</a></div>
+        </div>
+        <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
+        </div>
+            <div class="dropdown">
+                <div class="links">
+                    <a href="#">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Skills</a>
+                    <a href="#">Service</a>
+                    <a href="#">Contact</a>
+                    <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
+                </div>
             </div>
-            <a href="#" class="btn">Hire me</a>
+    </nav>
+    <section>
+        <div class="main-container">
+            <div class="image" data-aos="zoom-in" data-aos-duration="2500">
+                <img src="main.jpg" alt="">
+            </div>
+            <div class="content">
+                <h1 data-aos="zoom-in"  data-aos-duration="1100" data-aos-delay="700">Hello My Name Is <span>Israel</span></h1>
+                <div class="typewriter" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="900"> I'm a <span class="typewriter-text"></span><label for="">|</label></div>
+                <p data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="1100">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit quasi commodi quia rerum, iste corporis expedita in excepturi nesciunt repellendus quisquam amet provident ad mollitia debitis odit voluptatem necessitatibus tempora.</p>
+                <div class="social-links">
+                    <a href="https://github.com/chickenandbeef" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="1300"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.instagram.com/iseulaell/" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="1400"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/israelzuniga88/" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="1500"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+                <div class="btn" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="1600">
+                    <button>Hire Me</button>
+                </div>
+            </div>
         </div>
     </section>
+
+    <!--About Me-->
+
+    <section class="about" id="about">
+        <div class="content">
+            <div class="title" data-aos="zoom-in" data-aos-duration="1100" ><span>About Me</span></div>
+            <div class="about-details">
+                <div class="left" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="100" >
+                    <img src="main.jpg" alt=""/>
+                </div>
+                <div class="right">
+                    <p class="about-text" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="200"> My Name Is <span>Israel</span> and I am a <span>Software Developer, IT Tech & Photographer </span>Then lorem ipsum whatever the hell</p>
+                    <div class="exp-area">
+                        <p class="exp" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="300">
+                            Experience:
+                            <span>3 Years </span>
+                        </p>
+
+                        <p class="exp" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="400">
+                            Specialty:
+                            <span>Whatever you are special at</span>
+                        </p>
+                        <p class="exp" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="500">
+                            Location:
+                            <span>Houston,TX</span>
+                        </p>
+                        <p class="exp" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="600">
+                            Willing To Relocate:
+                            <span>Yes</span>
+                        </p>
+                    </div>
+                    <div class="button" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="700">
+                        <button>View My Projects</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--My Skills-->
+
+    <section class="skills" id="skills">
+        <div class="content">
+            <div class="title" data-aos="zoom-in" data-aos-duration="1100" ><span>My Skills</span></div>
+            <div class="skills-details">
+                <div class="text">
+                    <div class="topic" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="100">What I can offer your Company </div>
+                    <p data-aos="fade-right" data-aos-duration="1100" data-aos-delay="200">Write something here</p>
+                    <div class="experience" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="300">
+                        <div class="num">3+</div>
+                        <div class="exp">
+                            Years Of<br/>
+                            Experience
+                        </div>
+                    </div>
+                </div>
+                <div class="boxes">
+                    <div class="box" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="400">
+                        <div class="topic">Python</div>
+                        <div class="per">70%</div>
+                    </div>
+                    <div class="box"data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="500">
+                        <div class="topic">HTML</div>
+                        <div class="per">50%</div>
+                    </div>
+                    <div class="box" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="600">
+                        <div class="topic">CSS</div>
+                        <div class="per">50%</div>
+                    </div>
+                    <div class="box" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="700">
+                        <div class="topic">R</div>
+                        <div class="per">50%</div>
+                    </div>
+                    <div class="box"data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="800">
+                        <div class="topic">SQL</div>
+                        <div class="per">50%</div>
+                    </div>
+                    <div class="box" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="900">
+                    <div class="topic">JavaScript</div>
+                    <div class="per">50%</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--My Services-->
+    <section class="services" id="services">
+        <div class="content">
+            <div class="title"data-aos="zoom-in" data-aos-duration="1100"><span>My Services</span></div>
+            <div class="boxes">
+                <div class="box"data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="100">
+                    <div class="icon">
+                        <i class="fas fa-desktop"></i>
+                    </div>
+                    <div class="topic">Software Developer</div>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+                <div class="box"data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="300">
+                    <div class="icon">
+                        <i class="fas fa-desktop"></i>
+                    </div>
+                    <div class="topic">Cybersecurity/IT Tech</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+                <div class="box"data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="500">
+                    <div class="icon">
+                        <i class="fas fa-desktop"></i>
+                    </div>
+                    <div class="topic">Data Science</div>
+                    <p>YLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+                <div class="box"data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="700">
+                    <div class="icon">
+                        <i class="fas fa-camera"></i>
+                    </div>
+                    <div class="topic">Photography</div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!---Contact Me-->
+    <section class="contact" id="contact">
+        <div class="content">
+            <div class="title"><span>Contact Me</span></div>
+            <div class="text" data-aos="fade-down" data-aos-duration="1100" data-aos-delay="100">
+                <div class="topic">Questions or Comments? </div>
+                <p data-aos="fade-down" data-aos-duration="1100" data-aos-delay="100" >
+                    <br/>
+                    Work Email: blahblah@aol.com <br/>
+
+                    <br/>
+                    
+                    Work Phone: 832-281-7130 <br/>
+
+                    <br/>
+
+                    Available Hours: 9 AM - 6 PM CST <br/>
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!--Footer-->
+<footer>
+    <div class="text">
+        <span>Created By Israel Zun&#771iga
+            | &#169 2025 All Rights Reserved</span>
+    </div>
+</footer>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init({offset:0});
+</script>
+<script>
+    function hamburg(){
+        const navbar = document.querySelector(".dropdown");
+        navbar.style.transform = 'translateY(0px);'
+    }
+    function cancel(){
+        const navbar = document.querySelector(".dropdown");
+        navbar.style.transform = 'translateY(-500px)' ;
+    }
+</script>
+<script src="lab.js"></script>
 </body>
 </html>
