--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="lab.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 <body>
 
@@ -223,6 +223,6 @@
         navbar.style.transform = 'translateY(-500px)' ;
     }
 </script>
-<script src="lab.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
