--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dirr="ltr">
   <head>
     <meta charset="UTF-8">
-    <title> Portfolio </title>
+    <title>Lab Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -25,15 +25,15 @@
             <div class="link" data-aos="fade-up" data-aos-duration="1100"data-aos-delay="500"><a href="#">Contact</a></div>
         </div>
         <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
-        </div>
-            <div class="dropdown">
-                <div class="links">
-                    <a href="#">Home</a>
-                    <a href="#">About</a>
-                    <a href="#">Skills</a>
-                    <a href="#">Service</a>
-                    <a href="#">Contact</a>
-                    <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
+    </div>
+        <div class="dropdown">
+            <div class="links">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Skills</a>
+                <a href="#">Service</a>
+                <a href="#">Contact</a>
+                <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
                 </div>
             </div>
     </nav>
@@ -210,19 +210,7 @@
     </div>
 </footer>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script>
-  AOS.init({offset:0});
-</script>
-<script>
-    function hamburg(){
-        const navbar = document.querySelector(".dropdown");
-        navbar.style.transform = 'translateY(0px);'
-    }
-    function cancel(){
-        const navbar = document.querySelector(".dropdown");
-        navbar.style.transform = 'translateY(-500px)' ;
-    }
-</script>
+<script> AOS.init({offset:0}); </script>
 <script src="script.js"></script>
 </body>
 </html>
