--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
     <nav>
         <div class="nav-container">
             <div class="logo" data-aos="zoom-in" data-aos-duration="1100">
-                 Israel <span>Zuniga</span>
+                 Israel <span>Zun&#771iga</span>
         </div>
         <div class="links">
-            <div class="link" data-aos="fade-up" data-aos-duration="1100" data-aos-delay="100"><a href="#">Home</a></div>
-            <div class="link" data-aos="fade-up" data-aos-duration="1100"data-aos-delay="200"><a href="#">About</a></div>
-            <div class="link" data-aos="fade-up" data-aos-duration="1100"data-aos-delay="300"><a href="#">Skills</a></div>
-            <div class="link" data-aos="fade-up" data-aos-duration="1100"data-aos-delay="400"><a href="#">Services</a></div>
-            <div class="link" data-aos="fade-up" data-aos-duration="1100"data-aos-delay="500"><a href="#">Contact</a></div>
+            <div class="link" data-aos="fade-up" data-aos-duration="1100" data-aos-delay="100"><a href="#Home">Home</a></div>
+            <div class="link" data-aos="fade-up" data-aos-duration="1100"data-aos-delay="200"><a href="#About">About</a></div>
+            <div class="link" data-aos="fade-up" data-aos-duration="1100"data-aos-delay="300"><a href="#Skills">Skills</a></div>
+            <div class="link" data-aos="fade-up" data-aos-duration="1100"data-aos-delay="400"><a href="#Services">Services</a></div>
+            <div class="link" data-aos="fade-up" data-aos-duration="1100"data-aos-delay="500"><a href="#Contact">Contact</a></div>
         </div>
         <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
     </div>
         <div class="dropdown">
             <div class="links">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Skills</a>
-                <a href="#">Service</a>
-                <a href="#">Contact</a>
+                <a href="#Home">Home</a>
+                <a href="#About">About</a>
+                <a href="#Skills">Skills</a>
+                <a href="#Services">Service</a>
+                <a href="#Contact">Contact</a>
                 <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
                 </div>
             </div>
     </nav>
-    <section>
+    <section id="Home">
         <div class="main-container">
             <div class="image" data-aos="zoom-in" data-aos-duration="2500">
                 <img src="main.jpg" alt="">
@@ -60,7 +60,7 @@
 
     <!--About Me-->
 
-    <section class="about" id="about">
+    <section class="about" id="About">
         <div class="content">
             <div class="title" data-aos="zoom-in" data-aos-duration="1100" ><span>About Me</span></div>
             <div class="about-details">
@@ -98,7 +98,7 @@
 
     <!--My Skills-->
 
-    <section class="skills" id="skills">
+    <section class="skills" id="Skills">
         <div class="content">
             <div class="title" data-aos="zoom-in" data-aos-duration="1100" ><span>My Skills</span></div>
             <div class="skills-details">
@@ -143,7 +143,7 @@
     </section>
 
     <!--My Services-->
-    <section class="services" id="services">
+    <section class="services" id="Services">
         <div class="content">
             <div class="title"data-aos="zoom-in" data-aos-duration="1100"><span>My Services</span></div>
             <div class="boxes">
@@ -181,7 +181,7 @@
     </section>
 
     <!---Contact Me-->
-    <section class="contact" id="contact">
+    <section class="contact" id="Contact">
         <div class="content">
             <div class="title"><span>Contact Me</span></div>
             <div class="text" data-aos="fade-down" data-aos-duration="1100" data-aos-delay="100">
