--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dirr="ltr">
   <head>
     <meta charset="UTF-8">
-    <title>Lab Portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -45,7 +45,7 @@
             <div class="content">
                 <h1 data-aos="zoom-in"  data-aos-duration="1100" data-aos-delay="700">Hello My Name Is <span>Israel</span></h1>
                 <div class="typewriter" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="900"> I'm a <span class="typewriter-text"></span><label for="">|</label></div>
-                <p data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="1100">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit quasi commodi quia rerum, iste corporis expedita in excepturi nesciunt repellendus quisquam amet provident ad mollitia debitis odit voluptatem necessitatibus tempora.</p>
+                <p data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="1100">I am a full-stack Software Developer, with a background in IT and Cybersecurity, currently studying Data Science, and holds a Minor Degree in Finance. I also do Film Photography on the side. </p>
                 <div class="social-links">
                     <a href="https://github.com/chickenandbeef" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="1300"><i class="fa-brands fa-github"></i></a>
                     <a href="https://www.instagram.com/iseulaell/" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="1400"><i class="fa-brands fa-instagram"></i></a>
@@ -68,7 +68,7 @@
                     <img src="main.jpg" alt=""/>
                 </div>
                 <div class="right">
-                    <p class="about-text" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="200"> My Name Is <span>Israel</span> and I am a <span>Software Developer, IT Tech & Photographer </span>Then lorem ipsum whatever the hell</p>
+                    <p class="about-text" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="200"> My Name is <span>Israel</span> and I am a <span>Software Developer, IT Specialist & Photographer </span> from Houston, Texas. I hold a Associates in Computer Science. I love to work with Computers, on the software and hardware levels. And I actively learn new languages to fit every Computer Need. </p>
                     <div class="exp-area">
                         <p class="exp" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="300">
                             Experience:
@@ -77,7 +77,7 @@
 
                         <p class="exp" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="400">
                             Specialty:
-                            <span>Whatever you are special at</span>
+                            <span>Back-End Development, Cybersecurity and Data Analysis</span>
                         </p>
                         <p class="exp" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="500">
                             Location:
@@ -103,8 +103,7 @@
             <div class="title" data-aos="zoom-in" data-aos-duration="1100" ><span>My Skills</span></div>
             <div class="skills-details">
                 <div class="text">
-                    <div class="topic" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="100">What I can offer your Company </div>
-                    <p data-aos="fade-right" data-aos-duration="1100" data-aos-delay="200">Write something here</p>
+                    <p data-aos="fade-right" data-aos-duration="1100" data-aos-delay="200">My Coding Language <br> Progress and Repertoire </p>
                     <div class="experience" data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="300">
                         <div class="num">3+</div>
                         <div class="exp">
@@ -152,28 +151,28 @@
                         <i class="fas fa-desktop"></i>
                     </div>
                     <div class="topic">Software Developer</div>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>As a software developer, I offer a wide range of development services designed to meet the unique needs of businesses. Whether you're looking for a freelancer, contractor, or a full-time employee, I provide flexible solutions that deliver high-quality results. Including and not limited to: Development of responsive websites tailored to your business needs using modern frameworks like HTML, CSS, and JavaScript. Complete end-to-end development, from front-end user interfaces to back-end systems, ensuring seamless integration and optimized performance. Developing high-performance desktop applications with scalable architecture and smooth user interfaces.</p>
                 </div>
                 <div class="box"data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="300">
                     <div class="icon">
                         <i class="fas fa-desktop"></i>
                     </div>
                     <div class="topic">Cybersecurity/IT Tech</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>I offer comprehensive Cybersecurity and IT services, backed by certifications including CompTIA+ and CompTIA Security+, with ongoing work toward my Networking certifications, including expertise in VoIP. My experience spans a wide range of technologies, from virtual machines (VMs) and disaster recovery (DR) solutions to servers, desktops, and mobile devices. I am skilled at ensuring secure, reliable IT infrastructures and regularly work on systems management, troubleshooting, and optimization. Whether as a regular employee or contractor, I provide flexible and tailored IT support to meet the specific needs of businesses and organizations. </p>
                 </div>
                 <div class="box"data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="500">
                     <div class="icon">
                         <i class="fas fa-desktop"></i>
                     </div>
                     <div class="topic">Data Science</div>
-                    <p>YLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>I provide data science solutions that help businesses harness the power of their data to drive informed decision-making and achieve measurable results. My services include: Data Analysis & Visualization: Extracting meaningful insights from complex datasets using statistical techniques and visualization tools like Python, R, and Tableau, Business Intelligence: Leveraging data to streamline operations, enhance customer experiences, and identify new opportunities for growth. Consulting & Strategy: Collaborating with teams to design data-driven strategies that align with business objectives and KPIs.</p>
                 </div>
                 <div class="box"data-aos="zoom-in" data-aos-duration="1100" data-aos-delay="700">
                     <div class="icon">
                         <i class="fas fa-camera"></i>
                     </div>
                     <div class="topic">Photography</div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <p>I offer professional photography services, specializing in events, portraits, and product photography. With experience in both studio and on-location shoots, I focus on capturing high-quality images that truly represent the subject. Using advanced equipment and editing software, I ensure every photo is clear, well-composed, and visually engaging. Whether working as a regular employee or contractor, I am dedicated to providing photography solutions that match my clients' needs and vision.</p>
                     </div>
                 </div>
             </div>
@@ -188,11 +187,11 @@
                 <div class="topic">Questions or Comments? </div>
                 <p data-aos="fade-down" data-aos-duration="1100" data-aos-delay="100" >
                     <br/>
-                    Work Email: blahblah@aol.com <br/>
+                    Work Email: <br/>
 
                     <br/>
                     
-                    Work Phone: 832-281-7130 <br/>
+                    Work Phone: Ask For My Personal via Email <br/>
 
                     <br/>
 
